syntax = "proto3";

message UploadRequest {
  string apkfile_name = 1;
  bytes apk_content = 2;
}

message UploadResponse {
  string message = 1;
}

service YourService {
  rpc Upload (UploadRequest) returns (UploadResponse);
}
